public/css/style.css
/* Stick footer to bottom if there is little content in main*/

html,
body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}

footer {
  flex-shrink: 0;
}

/* Custom styling */

.logo {
  background-color: #ffe08a;
}

html {
  background-color: #ffe08a;
  background-image: url("../img/Random256Grunge05_purple.png");
}

.box {
  padding: 0.5rem;
}

.is-max-width-100 {
  max-width: 100%;
}

.is-cropped {
  white-space: nowrap;
  overflow-x: clip;
  text-overflow: ellipsis;
}

.is-top-left-position {
  position: absolute;
  left: 0.5em;
  top: 0.5rem;
  z-index: 1;
}

.is-absolute {
  position: absolute;
}

.is-top-right-position {
  position: absolute;
  right: 0.5em;
  top: 0.5rem;
  z-index: 1;
}

.is-line-height-1-3em {
  line-height: 1.3em;
}

.is-height-0 {
  display: none;
}

.is-height-100 {
  display: block;
}

.is-toggle-hidden {
  display: none;
}

.has-hidden:hover>.is-toggle-hidden {
  display: block;
}

.has-text-break-overflow {
  overflow-wrap: anywhere;
}

@media screen and (max-width: 450px) {
  .section {
    padding: 0em 0 3em;
  }
  .columns {
    margin: 0;
  }
  .column {
    padding: 0.25rem;
  }
  .is-top-left-position,
  .is-top-right-position {
    top: 0;
    border: 0;
  }
  .is-top-left-position {
    left: 0;
  }
  .is-top-right-position {
    right: 0;
  }
  .media:not(.is-not-centered) {
    flex-direction: column;
    align-items: center;
  }
  .media-left {
    margin: 0;
  }
  .media-content:not(article .media-content) {
    text-align: center;
  }

  .image.is-128x128 {
    width: 100%;
    height: 100%;
  }
  .is-max-width-less-1em {
    max-width: 100%;
  }
}

